# pyxtensor

./: .appveyor.yml  .gitmodules  .travis.yml  CMakeLists.txt  README.md  environment.yaml  pyxtensor.pc.in  pyxtensorConfig.cmake  pyxtensorConfig.cmake.in  setup.py
.github/workflows/: ci.yml
example/: CMakeLists.txt  example.cpp  main.py  setup.py
examples/cmake-build/: CMakeLists.txt  example.cpp  setup.py
examples/python-build/: main.py  setup.py
include/pyxtensor/: pybind11_xarray.hpp  pybind11_xtensor.hpp  pybind11_xtensor_fixed.hpp  pyxtensor.hpp
include/xtensor-extra/: pybind11.hpp  pybind11_xtensor.hpp  pybind11_xtensor_fixed.hpp
pyxtensor/: __init__.py
